--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,76 +1,74 @@
 <h2 id="titleBadge"><%= t('customer').pluralize %></h2>
-
-<ul class="nav nav-tabs" role="tablist">
-  <li class="nav-item active">
-    <a class="nav-link active" data-toggle="tab" href="#listing" role="tab">Listing</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-toggle="tab" href="#new" role="tab">Nouveau client</a>
-  </li>
-</ul>
-
-<div class="tab-content">
-  <div class="tab-pane fade show active" id="listing">
-    <%= search_form_for @search do |form| %>
-      <div class="form">
-        <div class="row">
-          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-            <%= form.label t('Name') %>
-            <%= form.select :name_eq, Customer.pluck(:name), {:include_blank => t('all_customer_names')}, {class: 'form-control', id: 'customer_name_select', onchange: 'this.form.submit();'} %>
-          </div>
-          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-            <%= form.label t('locality') %>
-            <%= form.select :locality_eq, Customer.distinct.order(:locality).pluck(:locality), {:include_blank => t('all_customer_localities')}, {class: 'form-control', id: 'customer_locality_select', onchange: 'this.form.submit();'} %>
-          </div>
-        </div>
+<hr>
+<%= search_form_for @search do |form| %>
+  <div class="form">
+    <div class="row">
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Name') %>
+        <%= form.select :name_eq, Customer.pluck(:name), {:include_blank => t('all_customer_names')}, {class: 'form-control', id: 'customer_name_select', onchange: 'this.form.submit();'} %>
       </div>
-    <% end %>
-    <table class="table table-hover table-striped"  id="table-to-color">
-      <thead class=thead-dark>
-      <tr>
-        <th><%= t('Name') %></th>
-        <th><%= t('mail') %></th>
-        <th><%= t('tva_record') %></th>
-        <th><%= t('street') %></th>
-        <th><%= t('number') %></th>
-        <th><%= t('zip') %></th>
-        <th><%= t('locality') %></th>
-        <th><%= t('country') %></th>
-        <th colspan="3"></th>
-      </tr>
-      </thead>
-
-      <tbody>
-      <% unless @customers.any? %>
-        <tr>
-          <td class="emptyTable" colspan="9">Aucune données à afficher</td>
-        </tr>
-      <% end %>
-      <% @customers.each do |customer| %>
-        <tr data-link="<%= edit_customer_path customer %>">
-          <td><%= customer.name %></td>
-          <td><%= customer.mail %></td>
-          <td><%= customer.tva_record %></td>
-          <td><%= customer.street %></td>
-          <td><%= customer.number %></td>
-          <td><%= customer.cp %></td>
-          <td><%= customer.locality %></td>
-          <td><%= customer.country %></td>
-          <td class="centerCell">
-            <%= link_to customer, method: :delete, data: {confirm: t('confirm_delete')} do %>
-              <%= image_tag("delete-icon.png", size: "30x30") %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
-    <br>
-    <div class="flickr_pagination">
-      <%= will_paginate @customers %>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('locality') %>
+        <%= form.select :locality_eq, Customer.distinct.order(:locality).pluck(:locality), {:include_blank => t('all_customer_localities')}, {class: 'form-control', id: 'customer_locality_select', onchange: 'this.form.submit();'} %>
+      </div>
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto button-add">
+        <%= link_to '+', new_customer_path, {class: 'btn btn-info', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </div>
     </div>
   </div>
-  <div class="tab-pane fade" id="new">
-    <%= render 'customers/new' %>
+<% end %>
+<table class="table table-hover table-striped" id="table-to-color">
+  <thead class=thead-dark>
+  <tr>
+    <th><%= t('Name') %></th>
+    <th><%= t('mail') %></th>
+    <th><%= t('tva_record') %></th>
+    <th><%= t('street') %></th>
+    <th><%= t('number') %></th>
+    <th><%= t('zip') %></th>
+    <th><%= t('locality') %></th>
+    <th><%= t('country') %></th>
+    <th></th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% unless @customers.any? %>
+    <tr>
+      <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+    </tr>
+  <% end %>
+  <% @customers.each do |customer| %>
+    <tr>
+      <td><%= customer.name %></td>
+      <td><%= customer.mail %></td>
+      <td><%= customer.tva_record %></td>
+      <td><%= customer.street %></td>
+      <td><%= customer.number %></td>
+      <td><%= customer.cp %></td>
+      <td><%= customer.locality %></td>
+      <td><%= customer.country %></td>
+      <td class="centerCell">
+        <%= link_to edit_customer_path(customer), remote: true do %>
+          <%= image_tag("edit-icon.png", size: "30x30") %>
+        <% end %>
+        <%= link_to customer, method: :delete, data: {confirm: t('confirm_delete')} do %>
+          <%= image_tag("delete-icon.png", size: "30x30") %>
+        <% end %>
+      </td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+<br>
+<div class="flickr_pagination">
+  <%= will_paginate @customers %>
+</div>
+
+<div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+    </div>
   </div>
 </div>
+
