--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -35,14 +35,19 @@
       </div>
       <div>
         <span>
-          <%= @invoice.customer.mail %>
+          <%= @invoice.customer.country %>
         </span>
       </div>
-      <div>
-        <span>
-          <%= "TVA : " + @invoice.customer.tva_record %>
-        </span>
-      </div>
+<!--      <div>-->
+<!--        <span>-->
+          <%#= @invoice.customer.mail %>
+<!--        </span>-->
+<!--      </div>-->
+<!--      <div>-->
+<!--        <span>-->
+          <%#= "TVA : " + @invoice.customer.tva_record %>
+<!--        </span>-->
+<!--      </div>-->
     </section>
     <div class="clearfix"></div>
 
