--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
   <%# if FileTest.exist? "/javascript//" + filename %>
-    <%#= javascript_include_tag "#{filename}" %>
+  <%#= javascript_include_tag "#{filename}" %>
   <%# end %>
 
   <%= favicon_link_tag asset_path('favicon.png'), :rel => 'icon', :type => 'image/png' %>
@@ -22,32 +22,50 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/projects">Projets</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/wares">Marchandises</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/services">Prestations</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/extras">Divers</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/customers">Clients</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/quotations">Devis</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/invoices">Facture</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/payments">Paiements</a>
-      </li>
-    </ul>
+    <% if current_user %>
+
+      <ul class="navbar-nav mr-auto">
+        <% if current_user.isAdmin %>
+          <li class="nav-item">
+            <a class="nav-link" href="/projects">Projets</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/services">Prestations</a>
+          </li>
+        <% end %>
+        <li class="nav-item">
+          <a class="nav-link" href="/wares">Marchandises</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/customers">Clients</a>
+        </li>
+        <% if current_user.isAdmin %>
+          <li class="nav-item">
+            <a class="nav-link" href="/extras">Divers</a>
+          </li>
+        <% end %>
+        <li class="nav-item">
+          <a class="nav-link" href="/quotations">Devis</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/invoices">Facture</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/payments">Paiements</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <%= link_to t('FR'), {:controller => 'application', :action => 'change_locale', :id => 'fr'}, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to t('EN'), {:controller => 'application', :action => 'change_locale', :id => 'en'} , class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to(t('logout'), destroy_user_session_path, method: :delete, class: "nav-link logout-button") %>
+        </li>
+      </ul>
+    <% end %>
   </div>
 </nav>
 <% if notice %>
@@ -61,4 +79,7 @@
   <%= yield %>
 </div>
 </body>
+
 </html>
+
+
