--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Payments</h1>
+<h2 id="titleBadge"><%= t('payments').pluralize %></h2>
+<hr>
 
 <table>
   <thead>
@@ -21,7 +22,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Payment', new_payment_path %>
