--- a/app/views/project_extra_lines/_form.html.erb
+++ b/app/views/project_extra_lines/_form.html.erb
@@ -11,7 +11,7 @@
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('extra') %>
-        <%= form.collection_select :extra_id, Extra.all, :id, :name, {:include_blank => true}, {class: 'form-control', id: 'extra_edit_select'} %>
+        <%= form.collection_select :extra_id, Extra.all, :id, :name, {:include_blank => true}, {:required => true, class: 'form-control', id: 'extra_edit_select'} %>
       </div>
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('unit') %>
@@ -25,7 +25,7 @@
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('Quantity') %>
-        <%= form.text_field :quantity, class: "form-control", autocomplete: 'nope', id: 'quantity', value: @project_extra_line.quantity ? @project_extra_line.quantity : "1" %>
+        <%= form.text_field :quantity, class: "form-control", autocomplete: 'nope', id: 'extra_quantity', value: @project_extra_line.quantity ? @project_extra_line.quantity : "1" %>
       </div>
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
