--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,6 +1,12 @@
 <%= form_with(model: @project, local: true, class: "needs-validation") do |form| %>
   <div class="form center-div">
 
+    <% if @project.id %>
+      <h3><%= t('editing_project') %></h3>
+    <% else %>
+      <h3><%= t('creating_project') %></h3>
+    <% end %>
+
     <div class="form-row">
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
