--- a/app/views/quotations/_form.html.erb
+++ b/app/views/quotations/_form.html.erb
@@ -1,6 +1,13 @@
 <%= form_with(model: @quotation, local: true, html: {autocomplete: 'off'}) do |form| %>
   <div class="form center-div">
 
+    <% if @quotation.id %>
+      <h3><%= t('editing_quotation') %></h3>
+    <% else %>
+      <h3><%= t('creating_quotation') %></h3>
+    <% end %>
+
+
     <div class="form-row">
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
@@ -22,7 +29,8 @@
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
         <%= form.label t('project') %>
-        <%= form.grouped_collection_select :project_id, Customer.order(:name), :listmodel, :name, :id, :name, {:include_blank => t('none').capitalize}, {id: "quotation_projects", class: "form-control"} %>
+        <%= form.select(:project_id, Project.where(status: 'Devis')
+            .collect {|project| [project.name, project.id, {customer: project.customer.id}]}, {:include_blank => true}, {class: 'form-control', id: 'edit_quotation_projects', autocomplete: 'nope', :multiple => false}) %>
       </div>
 
     </div>
