--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,85 +1,83 @@
 <h2 id="titleBadge"><%= t(:service).pluralize %></h2>
+<hr>
+<%= search_form_for @search do |form| %>
+  <div class="form">
+    <div class="row">
 
-<ul class="nav nav-tabs" role="tablist">
-  <li class="nav-item active">
-    <a class="nav-link active" data-toggle="tab" href="#listing" role="tab">Listing</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-toggle="tab" href="#new" role="tab">Nouvelle prestation</a>
-  </li>
-</ul>
-
-<div class="tab-content">
-  <div class="tab-pane fade show active" id="listing">
-    <%= search_form_for @search do |form| %>
-      <div class="form">
-        <div class="row">
-
-          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-            <%= form.label t('project') %>
-            <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort_select', onchange: 'this.form.submit();'} %>
-          </div>
-          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-            <%= form.label t('customer') %>
-            <%= form.collection_select :project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort_select', onchange: 'this.form.submit();'} %>
-          </div>
-          <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-            <%= form.label t('status') %>
-            <%= form.select :status_eq, Service.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
-          </div>
-        </div>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+        <%= form.label t('project') %>
+        <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-    <% end %>
-
-    <table class="table table-hover table-striped" id="table-to-color">
-      <thead class=thead-dark>
-      <tr>
-        <th class="centerCell"><%= t(:project).capitalize %></th>
-        <th><%= t('Description') %></th>
-        <th><%= t('comment') %></th>
-        <th class="centerCell"><%= t('status') %></th>
-        <th class="centerCell"><%= t('Date') %></th>
-        <th class="rightCell"><%= t('hourly_rate').to_s + ' (€/H)'  %></th>
-        <th class="centerCell"><%= t('duration').to_s + ' (H)'  %></th>
-        <th class="rightCell"><%= t('tva_rate').to_s + ' (%)'  %></th>
-        <th class="rightCell"><%= t('total_cost').to_s + ' (€)'  %></th>
-        <th></th>
-      </tr>
-      </thead>
-
-      <tbody>
-      <% unless @services.any? %>
-        <tr>
-          <td class="emptyTable" colspan="9">Aucune données à afficher</td>
-        </tr>
-      <% end %>
-      <% @services.each do |service| %>
-        <tr data-link="<%= edit_service_path service %>">
-          <td class="centerCell">
-            <%= service.project ? (link_to '#' + service.project.id.to_s, project_path(service.project.id)) : '' %>
-          </td>
-          <td><%= service.name %></td>
-          <td><%= service.comment %></td>
-          <td class="centerCell" id="status-cell"><%= service.status %></td>
-          <td class="centerCell"><%= l(service.date) %></td>
-          <td class="rightCell"><%= service.hourly_rate %></td>
-          <td class="centerCell"><%= service.duration.strftime('%H:%M') %></td>
-          <td class="rightCell"><%= number_with_precision service.tva_rate, :precision => 2  %></td>
-          <td class="rightCell"><%= number_with_precision service.total_cost, :precision => 2 %></td>
-          <td class="centerCell">
-            <%= link_to service, method: :delete, data: {confirm: t('confirm_delete')} do %>
-              <%= image_tag("delete-icon.png", size: "30x30") %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
-    <div class="flickr_pagination">
-      <%= will_paginate @services %>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+        <%= form.label t('customer') %>
+        <%= form.collection_select :project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort_select', onchange: 'this.form.submit();'} %>
+      </div>
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-auto">
+        <%= form.label t('status') %>
+        <%= form.select :status_eq, Service.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
+      </div>
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto button-add">
+        <%= link_to '+', new_service_path, {class: 'btn btn-info', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </div>
     </div>
   </div>
-  <div class="tab-pane fade" id="new">
-    <%= render 'services/new' %>
+<% end %>
+
+<table class="table table-hover table-striped" id="table-to-color">
+  <thead class=thead-dark>
+  <tr>
+    <th class="centerCell"><%= t(:project).capitalize %></th>
+    <th><%= t('Description') %></th>
+    <th><%= t('comment') %></th>
+    <th class="centerCell"><%= t('status') %></th>
+    <th class="centerCell"><%= t('Date') %></th>
+    <th class="rightCell"><%= t('hourly_rate').to_s + ' (€/H)' %></th>
+    <th class="centerCell"><%= t('duration').to_s + ' (H)' %></th>
+    <th class="rightCell"><%= t('tva_rate').to_s + ' (%)' %></th>
+    <th class="rightCell"><%= t('total_cost').to_s + ' (€)' %></th>
+    <th></th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% unless @services.any? %>
+    <tr>
+      <td class="emptyTable" colspan="10">Aucune données à afficher</td>
+    </tr>
+  <% end %>
+  <% @services.each do |service| %>
+    <tr>
+      <td class="centerCell">
+        <%= service.project ? (link_to '#' + service.project.id.to_s, project_path(service.project.id)) : '' %>
+      </td>
+      <td><%= service.name %></td>
+      <td><%= service.comment %></td>
+      <td class="centerCell" id="status-cell"><%= service.status %></td>
+      <td class="centerCell"><%= l(service.date) %></td>
+      <td class="rightCell"><%= service.hourly_rate %></td>
+      <td class="centerCell"><%= service.duration.strftime('%H:%M') %></td>
+      <td class="rightCell"><%= number_with_precision service.tva_rate, :precision => 2 %></td>
+      <td class="rightCell"><%= number_with_precision service.total_cost, :precision => 2 %></td>
+      <td class="centerCell">
+        <%= link_to edit_service_path(service), remote: true do %>
+          <%= image_tag("edit-icon.png", size: "30x30") %>
+        <% end %>
+        <%= link_to service, method: :delete, data: {confirm: t('confirm_delete')} do %>
+          <%= image_tag("delete-icon.png", size: "30x30") %>
+        <% end %>
+      </td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+
+<div class="flickr_pagination">
+  <%= will_paginate @services %>
+</div>
+
+<div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+    </div>
   </div>
 </div>
