--- a/app/views/wares/index.html.erb
+++ b/app/views/wares/index.html.erb
@@ -1,90 +1,87 @@
 <h2 id="titleBadge"><%= t('ware').pluralize %></h2>
-
-<ul class="nav nav-tabs" role="tablist">
-  <li class="nav-item active">
-    <a class="nav-link active" data-toggle="tab" href="#listing" role="tab">Listing</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" data-toggle="tab" href="#new" role="tab">Nouvelle marchandise</a>
-  </li>
-</ul>
-
-<div class="tab-content">
-  <div class="tab-pane fade show active" id="listing">
-    <%= search_form_for @search do |form| %>
-      <div class="form">
-        <div class="row">
-          <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
-            <%= form.label t('project')%>
-            <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort_select', onchange: 'this.form.submit();'} %>
-          </div>
-          <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
-            <%= form.label t('customer') %>
-            <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort_select', onchange: 'this.form.submit();'} %>
-          </div>
-          <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
-            <%= form.label t('status') %>
-            <%= form.select :status_eq, Ware.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
-          </div>
-        </div>
+<hr>
+<%= search_form_for @search do |form| %>
+  <div class="form">
+    <div class="row">
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
+        <%= form.label t('project') %>
+        <%= form.collection_select :project_id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-    <% end %>
-    <table class="table table-hover table-striped"  id="table-to-color">
-      <thead class=thead-dark>
-      <tr>
-        <th class="centerCell"><%= t(:project).capitalize %></th>
-        <th><%= t('customer').capitalize %></th>
-        <th><%= t('ware_name') %></th>
-        <th><%= t('provider_name') %></th>
-        <th><%= t('comment') %></th>
-        <th class="centerCell"><%= t('status') %></th>
-        <th></th>
-      </tr>
-      </thead>
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
+        <%= form.label t('customer') %>
+        <%= form.collection_select :customer_id_or_project_customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort_select', onchange: 'this.form.submit();'} %>
+      </div>
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto">
+        <%= form.label t('status') %>
+        <%= form.select :status_eq, Ware.statuses.map {|status| [status[0], status[1].to_i]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
+      </div>
+      <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-auto button-add">
+        <%= link_to '+', new_ware_path, {class: 'btn btn-info', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
+      </div>
 
-      <tbody>
-      <% unless @wares.any? %>
-        <tr>
-          <td class="emptyTable" colspan="9">Aucune données à afficher</td>
-        </tr>
-      <% end %>
-      <% @wares.each do |ware| %>
-        <tr data-link="<%= edit_ware_path ware %>">
-          <td class="centerCell">
-            <%= ware.project ? (link_to '#' + ware.project.id.to_s, edit_project_path(ware.project.id)) : '' %>
-          </td>
-          <td>
-            <%= # noinspection RubyNestedTernaryOperatorsInspection
-                ware.customer ? ware.customer.name : (ware.project ? ware.project.customer.name : '') %>
-          </td>
-          <td><%= ware.ware_name %></td>
-          <td><%= ware.provider_name %></td>
-          <td><%= ware.comment %></td>
-          <td class="centerCell" id="status-cell"><%= ware.status %></td>
-          <td class="centerCell">
-            <%= link_to ware, method: :delete, data: {confirm: t('confirm_delete')} do %>
-              <%= image_tag("delete-icon.png", size: "25x25") %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
-    <%= link_to '+', new_project_extra_line_path, {:remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-
-    <div class="flickr_pagination">
-      <hr>
-      <%= will_paginate @wares %>
     </div>
   </div>
-  <div class="tab-pane fade" id="new">
-    <%= render 'wares/new' %>
-  </div>
-  <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
+<% end %>
+<table class="table table-hover table-striped" id="table-to-color">
+  <thead class=thead-dark>
+  <tr>
+    <th class="centerCell"><%= t(:project).capitalize %></th>
+    <th><%= t('customer').capitalize %></th>
+    <th><%= t('ware_name') %></th>
+    <th><%= t('provider_name') %></th>
+    <th><%= t('comment') %></th>
+    <th class="centerCell"><%= t('status') %></th>
+    <th></th>
+  </tr>
+  </thead>
 
-      </div>
+  <tbody>
+  <% unless @wares.any? %>
+    <tr>
+      <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+    </tr>
+  <% end %>
+  <% @wares.each do |ware| %>
+    <tr>
+      <td class="centerCell">
+        <% if ware.project %>
+          <% if current_user.isAdmin %>
+            <%= (link_to '#' + ware.project.id.to_s, project_path(ware.project.id)) %>
+          <% else %>
+          <%= '#' + ware.project.id.to_s %>
+          <% end %>
+      <% end %>
+      </td>
+      <td>
+        <%= # noinspection RubyNestedTernaryOperatorsInspection
+            ware.customer ? ware.customer.name : (ware.project ? ware.project.customer.name : '') %>
+      </td>
+      <td><%= ware.ware_name %></td>
+      <td><%= ware.provider_name %></td>
+      <td><%= ware.comment %></td>
+      <td class="centerCell" id="status-cell"><%= ware.status %></td>
+      <td class="centerCell">
+        <%= link_to edit_ware_path(ware), remote: true do %>
+          <%= image_tag("edit-icon.png", size: "30x30") %>
+        <% end %>
+        <%= link_to ware, method: :delete, data: {confirm: t('confirm_delete')} do %>
+          <%= image_tag("delete-icon.png", size: "30x30") %>
+        <% end %>
+      </td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
+
+<div class="flickr_pagination">
+  <hr>
+  <%= will_paginate @wares %>
+</div>
+
+<div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+
     </div>
   </div>
 </div>
