--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -507,3 +507,15 @@
   margin-left: 1em;
 }
 
+th .current {
+  padding-right: 12px;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+//th .asc {
+//  background-image: url(arrow-down.png);
+//}
+//
+//th .desc {
+//  background-image: url(arrow-up.png);
+//}
