Nouveaux filtres pour les marchandises Typo usermanagement

--- a/app/views/wares/index.html.erb
+++ b/app/views/wares/index.html.erb
@@ -29,7 +29,7 @@
       <%= sortable "wares", 'project_id' %>
     </th>
     <th>
-      <%= sortable "wares", '"customers"."name"', t("customer")%>
+      <%= sortable "wares", "customers.name", t("customer")%>
     </th>
     <th>
       <%= sortable "wares", "ware_name" %>
